# chess_engine

./: CMakeLists.txt  README.md  bitboard.h  board.cpp  board.h  enums.h  main.cpp  moves.cpp  moves.h  square.h  utils.cpp  utils.h
chess_backend/: enums.h  main.cpp
chess_backend/generator/: evaluate.cpp  evaluate.h  order.cpp  order.h  search.cpp  search.h  transposition.cpp  transposition.h  zobrist.cpp  zobrist.h
chess_backend/moves/: moves.cpp  moves.h
chess_backend/pieces/: bishop.cpp  bishop.h  king.cpp  king.h  knight.cpp  knight.h  pawn.cpp  pawn.h  queen.cpp  queen.h  rook.cpp  rook.h
chess_backend/structure/: board.h  game_state.cpp  game_state.h
engine/: utils.cpp  utils.h
engine/generator/: search.cpp
engine/moves/: moves.cpp
engine/pieces/: knight.cpp  pawn.cpp  rook.cpp
engine/structure/: board.cpp  game_state.cpp  square.cpp
generator/: search.h
moves/: move_type.h  moves.cpp  moves.h
moves/slide/: diagonal.cpp  diagonal.h  straight.cpp  straight.h
pieces/: bishop.cpp  bishop.h  king.cpp  king.h  knight.cpp  knight.h  pawn.cpp  pawn.h  queen.cpp  queen.h  rook.cpp  rook.h
src/moves/slide/: straight.h
src/pieces/: bishop.cpp  king.h
src/structure/: board.h  game_state.h  square.h
structure/: bitboard.h  board.cpp  board.h  game_state.cpp  game_state.h  square.cpp  square.h
